# DOOM-STYLE-FPS

./: .gitignore  CMakeLists.txt  DOOM_STYLE  README.md  \  build.bat  build.sh  conanfile.txt
SHADERS/: fragment.fs  primitive.fs  primitive.vs  vertex.vs
SHADERS/Collider/: fragmentShader.fs  vertexShader.vs
SHADERS/Primitive/: fragmentShader.fs  vertexShader.vs
include/: BO.h  Camera.h  Shader.h  Texture.h
include/MODEL_LOADER/: Mesh.h  Model.h
include/glad/: glad.h
src/: glad.c  main.cpp
